--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ form > div > input:not([type="submit"]) {
 }
 .userAccessContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   width: 30rem;
   gap: 2rem;
