--- a/style.css
+++ b/style.css
@@ -1,9 +1,368 @@
+:root {
+  --primary-color: #E8451F; /* Orange */
+  --primary-color-light: #d43714; /* Light orange for hover and small details */
+  --secondary-color-buttons: #E9E9E9; /* Light gray for buttons */
+  --hoverColor-greyButtons: #cccaca;
+  --white: white; 
+  --text-color-dark: #1D1D1F; /* Dark text */
+  --destinationCard-details-color: #333333; /* Grey text for accents*/
+}
+/* ---------HOME PAGE---------*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Background Image */
+main{
+  background-image:url('../TravelDestinationsFrontEnd/photos/hero-background.png');
+  width:100%;
+  height:100vh;
+  background-size: cover; /* Cover the entire container */
+  background-position: center; 
+  z-index: 1;
+}
+/*hide the background image when the forms become visile */
+.background-hidden {
+  background-image: none !important; /* Override the background image */
+  background-color: var(--white); /* Optional: set a different background color */
+}
+
+/* Header Section */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: transparent;
+  color: var(--white);
+  z-index: 2;
+}
+
+.logo img {
+ height: 50px;
+}
+
+.auth-buttons .sign-in-btn {
+padding: 10px 20px;
+background-color: var(--primary-color);
+color: var(--white);
+border: none;
+border-radius: 8px;
+cursor: pointer;
+font-size: 14px;
+font-family:'Inter', sans-serif;
+font-weight: 600;
+gap: 8px;
+display: flex;
+align-items: center;
+}
+
+.auth-buttons .sign-in-btn:hover {
+background-color: var(--primary-color-light);
+}
+
+/* Drop-down menu with profile photo */
+.profile-menu {
+position: relative;
+}
+
+.profile-icon {
+height: 40px;
+width: 40px;
+border-radius: 50%;
+cursor: pointer;
+}
+
+.dropdown {
+display: none;
+position: absolute;
+right: 0;
+background-color: var(--white);
+min-width: 150px;
+border-radius: 5px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+z-index: 1;
+color: var(--text-color-dark);
+}
+
+.dropdown a {
+padding: 10px 20px;
+display: block;
+text-decoration: none;
+color: var(--text-color-dark);
+}
+
+.dropdown a:hover {
+background-color: #f1f1f1;
+}
+
+.profile-menu:hover .dropdown {
+display: block;
+}
+
+
+/* Hero Section */
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+  z-index: 2; /* Place the content above the overlay */
+  color: var(--text-color-dark);
+  padding-bottom: 50px;
+}
+
+.hero-content {
+  position:absolute;
+  max-width: 500px;
+  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+  top: 554px;
+  left: 55%;
+  transform: translateX(-50%); /* Adjust to truly center it based on its width */
+}
+
+.hero-content h1 {
+  font-family: 'Libre Baskerville';
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.hero-content p {
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.sign-up-btn {
+  background: transparent; 
+  border: none; 
+  font-size: 16px;
+  font-family:'Inter', sans-serif;
+  font-weight: 700;
+  color: inherit; /* Inherit color from parent */
+  cursor: pointer; 
+  display: flex; 
+  align-items: center; 
+}
+
+/* Icon Styling */
+#arrow-right {
+  background-color: var(--primary-color); 
+  border-radius: 4px; 
+  padding: 5px; 
+  margin-right: 5px;
+}
+
+
+/* Destinations Section Wrapper */
+.destinations-section-wrapper {
+  margin:100px;
+}
+
+/* Add new destination Button */
+.call-to-action {
+  width: 1066px; 
+  margin: 20px auto; /* Center the section */
+  display: flex; 
+  justify-content: flex-end; /* Align the button to the right */
+  padding: 10px 0; 
+}
+#addDestinationButton {
+  background-color: var(--primary-color);
+  color: var(--white); 
+  border: none;
+  border-radius: 5px; 
+  padding: 10px 20px; 
+  cursor: pointer; 
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+}
+#plus-icon{
+  margin-left: 5px;
+}
+#addDestinationButton:hover {
+  background-color: var(--primary-color-light);
+}
+
+
+/* Destinations Section */
+.destinations {
+  display: grid; 
+  grid-template-columns: repeat(3, 1fr); /* 3 columns */
+  gap: 20px; 
+  margin: 20px auto; 
+  width: 1066px;
+  align-content: center;
+}
+
+
+/* Destination Card */
+.destination-card {
+  width: 334px; 
+  height: 535px; 
+  border-radius: 14.68px; 
+  background-color: var(--text-color); 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional shadow */
+  display: flex; /* Use flexbox for internal layout */
+  flex-direction: column; /* Stack children vertically */
+  padding: 15px; 
+  font-family: 'Inter', sans-serif;
+}
+
+
+/* Destination Image */
+.destination-image {
+  width: 100%; 
+  height: 150px; 
+  border-radius: 7px; 
+  object-fit:cover; /* Ensure the image covers the area */
+  margin-bottom: 10px; 
+}
+
+
+/* Title */
+.destination-title {
+  font-family: 'Inter', sans-serif;
+  font-size: 22px; 
+  font-weight: 600; 
+  margin: 10px 0; 
+}
+
+
+/* User Info */
+.user-info {
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 10px; 
+}
+.profile-photo {
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%; 
+  margin-right: 10px; 
+  object-fit: cover;
+}
+.user-name {
+  font-size: 12px;
+  font-weight: bold; 
+  margin-right: 5px; 
+}
+.user-location {
+  color: var(--destinationCard-details-color); 
+  font-size: 12px;
+}
+
+
+/* Description */
+.destination-description {
+  margin-bottom: 20px; 
+  font-size: 14px;
+  
+}
+
+/* Post Info */
+.post-info {
+  font-size: 14px;
+  font-weight: bold;
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 20px;
+  color: var(--destinationCard-details-color);
+}
+.post-info i {
+  margin-right: 5px; 
+}
+
+
+/* Action Buttons */
+.action-buttons {
+  display: flex; 
+  justify-content: space-between;
+  width: 100%;
+}
+.open-maps-btn{
+  background-color: var(--primary-color); 
+  color: var(--white);
+  border: none; 
+  border-radius: 7px; 
+  padding: 10px; 
+  cursor: pointer; 
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 12px;
+}
+.open-maps-btn:hover {
+  background-color: var(--primary-color-light);
+}
+
+.add-favorites-btn {
+  background-color: var(--secondary-color-buttons) ;
+  color: var(--text-color-dark); 
+  border: none; 
+  border-radius: 7px; 
+  padding: 10px; 
+  cursor: pointer; 
+  font-family: 'Inter', sans-serif; 
+  font-weight: 600;
+  font-size: 12px;
+}
+.add-favorites-btn:hover {
+  background-color: var(--hoverColor-greyButtons);
+}
+
+
+.open-maps-btn,
+.add-favorites-btn {
+  flex: 1; /* Allows buttons to grow and take equal space */
+  margin: 0 5px; /* Optional: Add some margin for spacing */
+}
+
+/* Footer */
+.footer {
+  width: 100%;
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1066px;
+}
+
+.footer-logo img{
+  width: 200px;
+}
+
+.footer-text p {
+  color: var(--text-color-dark);
+  font-size: 14px;
+  font-family: 'Inter', sans-serif;
+  margin:0;
+}
+
+
+
+
+/* ---------Alessia's code---------*/
 .hidden {
   display: none;
 }
 .visible {
   display: block;
 }
+
+/*
 body {
   display: flex;
   flex-direction: column;
@@ -13,8 +372,6 @@ body {
 img {
   width: 300px;
   height: 200px;
-  /* max-width: 100%;
-    max-height: 100%; */
   object-fit: cover;
 }
 
@@ -33,6 +390,8 @@ button:hover {
   cursor: pointer;
   background-color: rgb(229, 225, 255);
 }
+*/
+
 form {
   display: flex;
   flex-direction: column;
