--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 body {
   display: flex;
   flex-direction: column;
-  text-align: center;
   margin: 0;
   font-family: "Inter", sans-serif;
 }
@@ -75,21 +74,23 @@ legend {
 
 #main-form-container {
   display: flex;
-  height: 100vh; /* Full viewport height */
-  width: 100vw; /* Full viewport width */
+  height: 100vh;
+  width: 100vw;
 }
 
 #form-section {
-  flex: 1; /* Takes half the width */
+  flex: 1;
+  margin-left: 4rem;
   padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: baseline;
 }
 
 #image-section {
-  flex: 1; 
-  overflow: hidden; 
+  flex: 1;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -98,17 +99,23 @@ legend {
 #login-picture {
   width: 100%;
   height: 100%;
-  object-fit: cover; 
+  object-fit: cover;
 }
 
 #signInForm {
   display: flex;
   flex-direction: column;
   gap: 0.6rem;
-  padding: 1rem;
   border-radius: 8px;
-  max-width: 18rem;
+  max-width: 22rem;
   align-items: baseline;
+}
+
+#signInMessage {
+  font-style: italic;
+  font-weight: 700;
+  color: #e8451f;
+  font-size: 14px;
 }
 
 /* Input styling */
@@ -119,11 +126,11 @@ input {
   background-color: rgb(255, 255, 255);
   box-shadow: rgb(0 0 0 / 0%) 0px 0px 0px 0px,
     rgb(60 66 87 / 16%) 0px 0px 0px 1px;
-  border-radius: 4px;
+  border-radius: 8px;
   font-size: 14px;
   padding: 8px 12px;
-  min-height: 28px;
-  width: 100%; 
+  min-height: 30px;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -133,22 +140,22 @@ input:focus {
 }
 
 label {
-  display: block; 
-  font-size: 12px; 
+  display: block;
+  font-size: 12px;
   font-weight: 600;
-  color: #000; 
-  margin-bottom: 4px; 
+  color: #000;
+  margin-bottom: 4px;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  margin-bottom: 1rem; /
+  margin-bottom: 1rem;
 }
 
 input::placeholder {
-  color: #888; 
+  color: #888;
   font-size: 12px;
   opacity: 0.5;
 }
@@ -160,7 +167,7 @@ form > div {
 form > div > input,
 form > div > button {
   width: 100%;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .formContainer {
@@ -169,8 +176,6 @@ form > div > button {
   width: 100%;
   max-width: 20rem;
   gap: 2rem;
-
-  margin: 0 auto;
 }
 
 .login-button {
@@ -195,5 +200,3 @@ form > div > button {
   display: flex;
   width: 100%;
 }
-
-
